# camera_base

./: CMakeLists.txt
include/camera_base/: camera_node_base.hpp  camera_ros_base.hpp
src/: camera_node_base.cpp  camera_ros_base.cpp
